*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9067 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/fr/foxtrick.properties
+++ b/content/locale/fr/foxtrick.properties
@@ -77,7 +77,7 @@ foxtrick.ForumYouthIcons.pre.desc=Lien vers une balise de texte pré-formatté (
 foxtrick.ForumYouthIcons.table.desc=Ajout d'un ivône pour faire un tableau. La balise personnalisée accepte les expressions régulières (ponctuation, par exemple.)
 foxtrick.ForumYouthIcons.symbols.desc=Ajout des icône de symboles ci-dessous. Les symboles sont séparées par des points-virgules. Pour utiliser un point-virgule entrez "/;".
 foxtrick.ForumYouthIcons.debug.desc=Ajout d'un icône pour le journal de débogage de FoxTrick
-foxtrick.ForumYouthIcons.settings.desc=Ajout d'un icône pour les paramètres de FoxTrick
+foxtrick.ForumYouthIcons.settings.desc=Lien vers les paramètres de FoxTrick
 foxtrick.ForumYouthIcons.tournament.desc=Ajout de l'icône TournamentID
 foxtrick.ForumYouthIcons.tournament_match.desc=Ajout de l'icône TournamentMatchID
 #FormatPostingText
@@ -365,6 +365,7 @@ foxtrick.ShowLineupSet.desc=Mettre en évidence les équipes victorieuses et/ou 
 foxtrick.ShowLineupSet.LineupSet.desc=Mettre en évidence les équipes qui ont préparé leur composition
 foxtrick.ShowLineupSet.Ownerless.desc=Mettre en évidence les équipes sans manager
 foxtrick.ShowLineupSet.Winning.desc=Mettre en évidence les équipes victorieuses
+foxtrick.SupporterStatsEnhancements.desc=Mettre en évidence les joueurs de l'effectif actuel dans les stats des supporters
 foxtrick.MobileEnhancements.desc=Ensemble d'améliorations pour les appareils mobiles
 foxtrick.MatchOrderInterface.desc=Réglage de l'interface d'ordre de match
 foxtrick.MatchOrderInterface.PlayedLastMatch.desc=Mettre en évidence les joueurs qui ont joué lors du dernier match ainsi que leur position et leur temps de jeu dans la boite de dialogue
@@ -704,10 +705,11 @@ Speciality.abbr=Sp
 
 Last_match=Dernier Match
 Last_match.abbr=Match
-Last_stars=Dernière Note
+Last_stars=Étoiles du dernier match
 Last_stars.abbr=No
+Last_stars_EndOfGame=Étoiles en fin de match
 Last_stars_EndOfGame.abbr=Rt
-Last_stars_decline=Dernière baisse de star
+Last_stars_decline=Différence d'étoiles entre le début et la fin du match
 Last_stars_decline.abbr=Diff
 Last_position=Dernière Position
 Last_position.abbr=Pos
