*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9068 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/fr/foxtrick.properties
+++ b/content/locale/fr/foxtrick.properties
@@ -1112,6 +1112,7 @@ foxtrick.log.header=Journal de FoxTrick
 toolbar.title=FoxTrick
 toolbar.disableTemporary=Désactiver temporairement
 toolbar.featureHighlight=Mettre en évidence les fonctionnalités
+toolbar.translationKeys=Bases de la traduction
 toolbar.preferences=Préférences
 status.active=activé
 status.enabled=activé, mais sans effet sur %s
@@ -1170,6 +1171,7 @@ prefs.additional.xmlLoad=Charger des fichiers pour des informations supplémenta
 prefs.additional.smallCopyIcons=Petites icônes pour les copies dans l'en-tête des pages concernées
 prefs.additional.anstoss2Icons=Utilisez les icônes de spécialités d'Anstoss2
 prefs.additional.featureHighlight=Mettre en évidence les fonctionnalités de FoxTrick
+prefs.additional.translationKeys=Voir les bases à traduire à la place de la traduction
 prefs.additional.HTMLDebugLog=Affiche des informations de débogage supplémentaires sur la page Hattrick (pour développeurs)
 
 prefs.feedback.saved=Préférences enregistrées \!
