--- a/content/locale/ro/foxtrick.properties
+++ b/content/locale/ro/foxtrick.properties
@@ -257,7 +257,9 @@ foxtrick.ContextMenuCopy.HtMl.desc=Optiune pentru a copia continutul selectat in
 foxtrick.ContextMenuCopy.Table.desc=Optiune pentru a copia tabelul in HT-ML
 foxtrick.NewMail.desc=Evidentiaza numerotarea mesajelor noi din casuta de mesaj si forum
 foxtrick.NewMail.NotifyMail.desc=Afiseaza o notificare daca ai mesaje noi
+foxtrick.NewMail.NotifyMailSound.desc=Redare sunt pentru mail nou primit
 foxtrick.NewMail.NotifyForum.desc=Afiseaza o notificare daca sunt mesaje noi adresate tie pe forum
+foxtrick.NewMail.NotifyForumSound.desc=Redare sunt pentru un nou raspuns primit pe forum
 foxtrick.CopyYouth.desc=Functii de copiere pentru rapoarte de juniori si surse
 foxtrick.CopyYouth.TrainingReport.desc=Raport antrenament
 foxtrick.CopyYouth.ScoutComment.desc=Comentariu cautaror de talente
@@ -292,6 +294,7 @@ foxtrick.TeamPopupLinks.NextMatch.desc=Link catre urmatorul meci
 foxtrick.TeamPopupLinks.AddNextMatch.desc=Adauga urmatorul meci la HT-Live
 foxtrick.TeamPopupLinks.YouthMatches.desc=Link catre meciurile juniorilor
 foxtrick.TeamPopupLinks.Coach.desc=Link catre Antrenor
+foxtrick.TeamPopupLinks.CustomLink.desc=Link-uri particularizate in linii separate. Tag-urile [UserID] si [TeamID] vor fi inlocuite cu ID-urile actuale. Exemplu\: {"link"\:"http\://example.com/[teamid]", "title"\:"example link", "more"\: false, "newTab"\:true}
 foxtrick.SkillColoring.desc=Vizualizare mai usoara a calitatilor
 foxtrick.SkillColoring.skill_color.desc=Coloreaza calitatile
 foxtrick.SkillColoring.only_skill_color.desc=Coloreaza calitatile, dar nu si personalitatea, starea fanilor etc.
@@ -379,6 +382,7 @@ foxtrick.Filter.desc=Adauga filtre la pagina jucatori de top
 foxtrick.RatingsDisplay.desc=Afiseaza ratinguri medii in statistici in intervalul 0-20.
 foxtrick.RatingsDisplay.DenominationsRange.desc=In intervalul 0-20 denumiri
 foxtrick.RatingsDisplay.HatStats.desc=Ca HatStats
+foxtrick.SafeForWork.desc=Inlocuieste pictograma si titlul tab-urilor Hattrick pentru a arata mai putin suspecte. Asigura-te ca dezactivezi toate modulele care ar putea fi riscante, mai ales modulele "Alert".
 
 # -----------------------------------------------------------------------------
 
@@ -386,6 +390,8 @@ foxtrick.RatingsDisplay.HatStats.desc=Ca HatStats
 # IN-GAME STRINGS. translate first
 
 #Save for work
+foxtrick.SafeForWork.title=Titlu
+foxtrick.SafeForWork.icon=Pictograma
 
 #Embed Media
 foxtrick.EmbedMedia.EmbeddedImage=Imagine incorporata
@@ -578,6 +584,7 @@ matchOrder.options=Optiuni
 matchOrder.staminaDiscount=Reducere de rezistenta
 matchOrder.staminaDiscount.title=Ratingurile pe sectoare sunt actualizate in functie de contributia jucatorilor la sectorul respectiv
 matchOrder.summary=Rezumat
+matchOrder.tournamentMatch=Meci de turneu
 
 #Skills
 Playmaking=Constructie
@@ -1105,6 +1112,10 @@ foxtrick.log.env=Version %1, %2 platform, %3 locale, %4 layout, %5 direction
 # Captions and labels of foxtrick preferences
 
 toolbar.title=FoxTrick
+toolbar.disableTemporary=Dezactiveaza temporar
+toolbar.featureHighlight=Evidentiaza caracteristici
+toolbar.translationKeys=Afiseaza taste de traducere
+toolbar.preferences=Preferinte
 status.active=Activ
 status.enabled=Activat, dar nu este activ in %s
 status.disabled=Dezactivat
@@ -1160,6 +1171,9 @@ prefs.loadSave.import.notice=Lipeste preferintele salvate in casuta text si apas
 prefs.additional.title=Optiuni generale
 prefs.additional.xmlLoad=Incarca XMLs pentru informatii extra de la Hattrick
 prefs.additional.smallCopyIcons=Iconite mici de copiat in locul casutei separate
+prefs.additional.anstoss2Icons=Utilizeaza pictograme Anstoss2 pentru specialitati
+prefs.additional.featureHighlight=Evidentiaza caracteristicile FoxTrick
+prefs.additional.translationKeys=Afiseaza taste de traducere in loc de traduceri
 prefs.additional.HTMLDebugLog=Arata log-ul Foxtrick in josul paginii (pentru debugging)
 
 prefs.feedback.saved=Preferinte salvate\!
@@ -1179,6 +1193,7 @@ link.recentChanges=Schimbari recente
 
 releaseNotes.show=Arata notele lansarii dupa fiecare update
 releaseNotes.showFor=Arata notele lansarii pentru\:
+releaseNotes.version=Versiune\:
 
 about.copyright=Copyright
 about.maintainers=Intretinatori
